@@ -5,6 +5,7 @@ META.yml
 Makefile.PL
 README
 Template_strict.patch
+lib/Dist/Zilla/Plugin/GitVersionCheckCJM.pm
 lib/Dist/Zilla/Plugin/PodLoom.pm
 lib/Dist/Zilla/Plugin/TemplateCJM.pm
 lib/Dist/Zilla/Plugin/VersionFromModule.pm
