@@ -21,6 +21,7 @@ data = tools/loom.pl
 [MakeMaker]
 [MatchManifest]
 [TemplateCJM]
+[GitVersionCheckCJM]
 
 [Repository]
 git_remote = github
