@@ -1,0 +1,164 @@
+#---------------------------------------------------------------------
+package Dist::Zilla::Plugin::GitVersionCheckCJM;
+#
+# Copyright 2009 Christopher J. Madsen
+#
+# Author: Christopher J. Madsen <perl@cjmweb.net>
+# Created: 15 Nov 2009
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the same terms as Perl itself.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See either the
+# GNU General Public License or the Artistic License for more details.
+#
+# ABSTRACT: Ensure version numbers are up-to-date
+#---------------------------------------------------------------------
+
+our $VERSION = '0.02';
+
+=head1 DEPENDENCIES
+
+GitVersionCheckCJM requires L<Dist::Zilla> 1.092680 or later.  It also
+requires L<Git>, which is not on CPAN, but is distributed as part of
+C<git>.
+
+=cut
+
+use Moose;
+use Moose::Autobox;
+with 'Dist::Zilla::Role::FileMunger';
+with 'Dist::Zilla::Role::ModuleInfo';
+
+use Git ();
+
+#---------------------------------------------------------------------
+# Main entry point:
+
+sub munge_files {
+  my ($self) = @_;
+
+  # Get the released versions:
+  my $git = Git->repository( $self->zilla->root );
+
+  my %released = map { /^v?([\d._]+)$/ ? ($1, 1) : () } $git->command('tag');
+
+  # Get the list of modified but not-checked-in files:
+  my %modified;
+  {
+    my ($fh, $ctx) = $git->command_output_pipe('status');
+    my $untracked;
+
+    while (<$fh>) {
+      $untracked = 1 if /^# Untracked files:/;
+
+      $modified{$1} = 1
+          if /^#\s*(?:modified|new file):\s*(\S.*)/
+          or ($untracked and /^#\t\s*(\S.*)/);
+    }
+    # Status returns non-zero if there's nothing to check in:
+    eval { $git->command_close_pipe($fh, $ctx) };
+  }
+
+  # Get the list of modules:
+  my $files = $self->zilla->files->grep(
+    sub { $_->name =~ /\.pm$/ and $_->name !~ m{^t/};}
+  );
+
+  # Check each module:
+  my $errors = 0;
+  foreach my $file ($files->flatten) {
+    ++$errors if $self->munge_file($file, $git, \%modified, \%released);
+  } # end foreach $file
+
+  die "Stopped because of errors\n" if $errors;
+} # end munge_files
+
+#---------------------------------------------------------------------
+# Process all POD sections of a module as templates:
+
+sub munge_file
+{
+  my ($self, $file, $git, $modifiedRef, $releasedRef) = @_;
+
+  # Extract information from the module:
+  my $pmFile  = $file->name;
+  my $pm_info = $self->get_module_info($file);
+
+  my $version = $pm_info->version
+      or die "ERROR: Can't find version in $pmFile";
+
+  if ($version eq $self->zilla->version) {
+    return unless $releasedRef->{$version};
+  }
+
+  if ($modifiedRef->{$pmFile}) {
+    $self->zilla->log("ERROR: $pmFile: $version needs to be updated");
+    return 1;
+  }
+
+  unless ($releasedRef->{$version}) {
+    $self->zilla->log("ERROR: $pmFile: $version does not seem to have been released, but is not current");
+    return 1;
+  }
+
+  my $lastChangedRev = $git->command_oneline(
+    qw(rev-list -n1 HEAD --) => $pmFile
+  );
+
+  my $inRelease = $git->command_oneline(
+    qw(name-rev --refs), "refs/tags/$version",
+    $lastChangedRev
+  );
+
+  return if $inRelease =~ m! tags/\Q$version\E!;
+
+  $self->zilla->log("ERROR: $pmFile: $version needs to be updated");
+  return 1;
+} # end munge_file
+
+#---------------------------------------------------------------------
+no Moose;
+__PACKAGE__->meta->make_immutable;
+1;
+
+__END__
+
+=head1 DESCRIPTION
+
+This plugin makes sure that module version numbers are updated as
+necessary.  In a distribution with multiple module, I like to update a
+module's version only when a change is made to that module.  In other
+words, a module's version is the version of the last distribution
+release in which it was modified.
+
+This plugin checks each module in the distribution, and makes sure
+that it matches one of two conditions:
+
+=over
+
+=item 1.
+
+There is a tag matching the version, and the last commit on that
+module is included in that tag.
+
+=item 2.
+
+The version matches the distribution's version, and that version has
+not been tagged yet (i.e., the distribution has not been released).
+
+=back
+
+If neither condition holds, it prints an error message.  After
+checking all modules, it aborts the build if any module had an error.
+
+=for Pod::Loom-omit
+CONFIGURATION AND ENVIRONMENT
+
+=for Pod::Coverage
+munge_file
+munge_files
+
+=cut
